<resources>
    <string name="app_name">Battery Manager</string>
    <string name="in_this_app_you_can">In This App You Can</string>
    <string name="info_title">check your battery state</string>
    <string name="voltage">voltage</string>
    <string name="technology">technology</string>
    <string name="plug_state">plug state</string>
    <string name="temperature">temperature</string>
</resources>