<?xml version="1.0" encoding="utf-8"?>


<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_500"
        tools:context=".activity.MainActivity">

        <ImageView
            android:id="@+id/img_menu"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="@dimen/margin_large"
            android:src="@drawable/menu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.mikhaellopez.circularprogressbar.CircularProgressBar
            android:id="@+id/circularProgressBar"
            android:layout_width="240dp"
            android:layout_height="240dp"
            app:cpb_background_progressbar_color="#b6bbd8"
            app:cpb_background_progressbar_width="5dp"
            app:cpb_progress_direction="to_right"
            app:cpb_progressbar_color="@color/green"
            app:cpb_progressbar_width="10dp"
            app:cpb_round_border="false"
            app:layout_constraintBottom_toTopOf="@+id/chart_g4"
            app:layout_constraintEnd_toEndOf="@id/chart_g2"
            app:layout_constraintStart_toStartOf="@+id/chart_g1"
            app:layout_constraintTop_toTopOf="@+id/chart_g3" />

        <TextView
            android:id="@+id/txt_charge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:textColor="@color/white"
            android:textSize="@dimen/large_text"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/chart_g2"
            app:layout_constraintStart_toStartOf="@+id/chart_g1"
            app:layout_constraintTop_toTopOf="@+id/chart_g5" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/lighting"
            app:layout_constraintBottom_toTopOf="@+id/chart_g5"
            app:layout_constraintEnd_toEndOf="@+id/circularProgressBar"
            app:layout_constraintStart_toStartOf="@+id/circularProgressBar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.9" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.4" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/chart_g5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.24" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/base_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.45" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/info_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/base_guideline">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.75" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/g7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info_title"
                android:textColor="@color/info_title_color"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/g1"
                app:layout_constraintEnd_toStartOf="@+id/g6"
                app:layout_constraintStart_toStartOf="@+id/g7"
                app:layout_constraintTop_toTopOf="parent">

            </TextView>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/voltage"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintStart_toStartOf="@+id/g7"
                app:layout_constraintTop_toTopOf="@+id/g1" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/voltage"
                android:textColor="@color/alpha_text_color"
                android:textSize="@dimen/normal_text"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="@+id/imageView" />

            <TextView
                android:id="@+id/txt_voltage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintStart_toEndOf="@+id/imageView" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cpu"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintStart_toStartOf="@+id/g5"
                app:layout_constraintTop_toTopOf="@+id/g1" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/technology"
                android:textColor="@color/alpha_text_color"
                android:textSize="@dimen/normal_text"
                app:layout_constraintStart_toEndOf="@+id/img2"
                app:layout_constraintTop_toTopOf="@+id/img2" />

            <TextView
                android:id="@+id/txt_technology"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img2"
                app:layout_constraintStart_toEndOf="@+id/img2" />

            <ImageView
                android:id="@+id/img3"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/plug"
                app:layout_constraintBottom_toTopOf="@+id/g3"
                app:layout_constraintStart_toStartOf="@+id/g7"
                app:layout_constraintTop_toTopOf="@+id/g2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/plug_state"
                android:textColor="@color/alpha_text_color"
                android:textSize="@dimen/normal_text"
                app:layout_constraintStart_toEndOf="@+id/img3"
                app:layout_constraintTop_toTopOf="@+id/img3" />

            <TextView
                android:id="@+id/txt_plug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img3"
                app:layout_constraintStart_toEndOf="@+id/img3" />

            <ImageView
                android:id="@+id/img4"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/thermometer"
                app:layout_constraintBottom_toTopOf="@+id/g3"
                app:layout_constraintStart_toStartOf="@+id/g5"
                app:layout_constraintTop_toTopOf="@+id/g2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:text="@string/temperature"
                android:textColor="@color/alpha_text_color"
                android:textSize="@dimen/normal_text"
                app:layout_constraintStart_toEndOf="@+id/img4"
                app:layout_constraintTop_toTopOf="@+id/img4" />

            <TextView
                android:id="@+id/txt_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_large"
                android:textColor="@color/white"
                android:textSize="@dimen/normal_text"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/img4"
                app:layout_constraintStart_toEndOf="@+id/img4" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/line"
                app:layout_constraintBottom_toTopOf="@+id/g1"
                app:layout_constraintEnd_toStartOf="@+id/g6"
                app:layout_constraintStart_toStartOf="@+id/g7" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="@color/line"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintEnd_toStartOf="@+id/g5"
                app:layout_constraintStart_toStartOf="@+id/g7" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_large"
                android:background="@color/line"
                app:layout_constraintBottom_toTopOf="@+id/g2"
                app:layout_constraintEnd_toStartOf="@+id/g6"
                app:layout_constraintStart_toStartOf="@+id/g5" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_margin="15sp"
                android:background="@drawable/health_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/g3">

                <ImageView
                    android:id="@+id/img_health"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/cpu"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txt_health"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/txt_health"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_large"
                    android:text="sdfdv"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/img_health"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="270dp"
        android:layout_height="match_parent"
        android:id="@+id/nav_menu"
        android:layout_gravity="right"
        android:clickable="true"
        android:focusable="true"
        android:fitsSystemWindows="true">
        <include
            android:id="@+id/inc_drawer"
            layout="@layout/drawer_layout"/>
    </com.google.android.material.navigation.NavigationView>

</androidx.drawerlayout.widget.DrawerLayout>